fixed extra margin that was causing a rendering error in firefox

--- a/src/app/pad.component.scss
+++ b/src/app/pad.component.scss
@@ -57,6 +57,8 @@
 
         .mode-button {
           padding: 0px 12px;
+          margin-top: 0px;
+          margin-bottom: 0px;
           height: $header-height - 1px;
           border-radius: 0;
           font-size: 14px;
